WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280269
REGRESSION(
284065@main
): [GStreamer][MediaStream] Assertion failure ASSERTION FAILED: canSafelyBeUsed()
https://bugs.webkit.org/show_bug.cgi?id=280269
Summary
REGRESSION(284065@main): [GStreamer][MediaStream] Assertion failure ASSERTION...
zsun
Reported
2024-09-24 06:45:28 PDT
STDERR: ASSERTION FAILED: canSafelyBeUsed() STDERR: /app/webkit/WebKitBuild/WPE/Release/WTF/Headers/wtf/WeakPtr.h(94) : T* WTF::WeakPtr< <template-parameter-1-1>, WeakPtrImpl, <template-parameter-1-3> >::get() const [with T = WebCore::MediaStreamTrackPrivate; WeakPtrImpl = WTF::DefaultWeakPtrImpl; PtrTraits = WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>] STDERR: 1 0x7fdd97b81fda InternalSource::videoFrameAvailable(WebCore::VideoFrame&, WebCore::VideoFrameTimeMetadata) STDERR: 2 0x7fdd97b5cd4e WebCore::RealtimeMediaSource::videoFrameAvailable(WebCore::VideoFrame&, WebCore::VideoFrameTimeMetadata) STDERR: 3 0x7fdd97b71391 WebCore::RealtimeVideoCaptureSource::dispatchVideoFrameToObservers(WebCore::VideoFrame&, WebCore::VideoFrameTimeMetadata) STDERR: 4 0x7fdd97b97c9f WTF::Detail::CallableWrapper<WebCore::MockRealtimeVideoSourceGStreamer::MockRealtimeVideoSourceGStreamer(WTF::String&&, WTF::AtomString&&, WebCore::MediaDeviceHashSalts&&, std::optional<WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long>, unsigned long, (WTF::SupportsObjectIdentifierNullState)0> >)::{lambda(auto:1&&)#1}, void, WTF::Ref<WebCore::VideoFrameGStreamer, WTF::RawPtrTraits<WebCore::VideoFrameGStreamer>, WTF::DefaultRefDerefTraits<WebCore::VideoFrameGStreamer> >&&>::call(WTF::Ref<WebCore::VideoFrameGStreamer, WTF::RawPtrTraits<WebCore::VideoFrameGStreamer>, WTF::DefaultRefDerefTraits<WebCore::VideoFrameGStreamer> >&&) STDERR: 5 0x7fdd97b87068 WebCore::GStreamerVideoCapturer::setSinkVideoFrameCallback(WTF::Function<void (WTF::Ref<WebCore::VideoFrameGStreamer, WTF::RawPtrTraits<WebCore::VideoFrameGStreamer>, WTF::DefaultRefDerefTraits<WebCore::VideoFrameGStreamer> >&&)>&&)::{lambda(WebCore::GStreamerVideoCapturer*, _GstElement*)#1}::_FUN(WebCore::GStreamerVideoCapturer*, _GstElement*) STDERR: 6 0x7fdd873af056 ffi_call_unix64 STDERR: 7 0x7fdd873adb5d ffi_call_int STDERR: 8 0x7fdd873ae313 ffi_call STDERR: 9 0x7fdd8c90ab43 g_cclosure_marshal_generic_va STDERR: 10 0x7fdd8c924a83 g_signal_emit_valist STDERR: 11 0x7fdd8c924c03 g_signal_emit STDERR: 12 0x7fdd89d2bbab gst_app_sink_render_common.isra.0 STDERR: 13 0x7fdd89d014e3 gst_base_sink_chain_unlocked.isra.0 STDERR: 14 0x7fdd89cce01e gst_base_sink_chain_main STDERR: 15 0x7fdd8d4f2b6c gst_pad_chain_data_unchecked STDERR: 16 0x7fdd8d4f5f0e gst_pad_push_data STDERR: 17 0x7fdd8d4f6544 gst_pad_push STDERR: 18 0x7fdb4c49c0e9 gst_queue_loop STDERR: 19 0x7fdd8d52a7d4 gst_task_func STDERR: 20 0x7fdd8d70c4f2 g_thread_pool_thread_proxy.lto_priv.0 STDERR: 21 0x7fdd8d709862 g_thread_proxy STDERR: 22 0x7fdd8cf49e39 start_thread STDERR: 23 0x7fdd8cfd18c4 clone STDERR: WPEWebProcess terminated (pid 1032808) for reason: crash
Attachments
Add attachment
proposed patch, testcase, etc.
zsun
Comment 1
2024-09-24 07:12:00 PDT
webrtc/audio-peer-connection-g722.html webrtc/audio-peer-connection-webaudio.html webrtc/audio-replace-track.html webrtc/clone-audio-track.html webrtc/concurrentVideoPlayback.html webrtc/concurrentVideoPlayback2.html webrtc/connection-state.html webrtc/direction-change.html webrtc/ephemeral-certificates-and-cnames.html webrtc/h264-baseline.html webrtc/h265.html webrtc/ice-candidate-sdpMLineIndex.html webrtc/msection-recycling.html webrtc/msid-setCodecPreferences.html webrtc/multi-audio.html webrtc/multi-video.html webrtc/peer-connection-audio-mute.html webrtc/peer-connection-audio-mute2.html webrtc/peer-connection-audio-unmute.html webrtc/peer-connection-createMediaStreamDestination.html webrtc/peer-connection-remote-audio-mute.html webrtc/peer-connection-track-end.html webrtc/peerconnection-page-cache.html webrtc/receiver-track-should-stay-live-even-if-receiver-is-inactive.html webrtc/release-after-getting-track.html webrtc/remoteAudio-never-played.html webrtc/remove-track.html webrtc/utf8-sdp.html webrtc/video-addTrack.html webrtc/video-autoplay.html webrtc/video-autoplay1.html webrtc/video-autoplay2.html webrtc/video-autoplay3.html webrtc/video-autoplay4.html webrtc/video-av1.html webrtc/video-clone-track.html webrtc/video-getParameters.html webrtc/video-lowercase-media-subtype.html webrtc/video-maxBitrate-vp8.html webrtc/video-maxBitrate.html webrtc/video-maxFramerate.html webrtc/video-mute-vp8.html webrtc/video-mute.html webrtc/video-receivers.html webrtc/video-remote-mute.html webrtc/video-replace-muted-track.html webrtc/video-replace-track-to-null.html webrtc/video-rotation-no-cvo.html webrtc/video-setDirection.html webrtc/video-stats.html webrtc/video-update-often.html webrtc/video-with-data-channel.html webrtc/vp8-then-h264-gpu-process-crash.html webrtc/vp9-profile2.html webrtc/vp9-sw.html webrtc/vp9.html
Philippe Normand
Comment 2
2024-09-24 07:13:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34166
EWS
Comment 3
2024-09-25 01:19:22 PDT
Committed
284211@main
(678c69226d9c): <
https://commits.webkit.org/284211@main
> Reviewed commits have been landed. Closing PR #34166 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug