Cherry-pick 284211@main (678c69226d9c). https://bugs.webkit.org/show_bug.cgi?id=280269

REGRESSION(284065@main): [GStreamer][MediaStream] Assertion failure ASSERTION FAILED: canSafelyBeUsed()
    https://bugs.webkit.org/show_bug.cgi?id=280269

    Reviewed by Xabier Rodriguez-Calvar.

    Using WeakPtr for keeping track of the MediaStreamTrackPrivate in the mediastreamsrc element was a
    mistake because the video frame dispatching can be triggered from a different thread.
    ThreadSafeWeakPtr can't be used either, and actually there's no risk of reference cycles here, so
    use RefPtr.

    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:

    Canonical link: https://commits.webkit.org/284211@main

Canonical link: https://commits.webkit.org/282416.154@webkitglib/2.46